--- a/report/main.tex
+++ b/report/main.tex
@@ -807,6 +807,11 @@ In order to improve the accuracy of the temperature readings, a multisampling te
 
 \section{Future Work}
 lidar com a atenuação do adc do esp, dimensionar para 2V
+experimentar uma linearização do valor do ntc com a relação tensão temp
+para usar o stein hart tirar tres pontos experimentais para o modelo ser mais aproximado ao real 
+(metodos de calibração)
+
+
 
 \bibliography{references} % Add bibliography data file
 
